--- a/data_cleaning_predit_hair_loss.ipynb
+++ b/data_cleaning_predit_hair_loss.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 98,
    "id": "e1897482",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 99,
    "id": "2f7d2054",
    "metadata": {},
    "outputs": [
@@ -75,13 +75,12 @@
    ],
    "source": [
     "# Loading the dataset\n",
-    "hair_data = pd.read_csv('Data/Predict Hair Fall Raw.csv')\n",
+    "hair_data = pd.read_csv('Data/Predict Hair Fall.csv')\n",
     "hair_data.describe(include='all')\n",
     "\n",
     "# Upon loading the dataset, we can see that the index column contains the id assigned to the participant. So, we will drop this column and reset the index.\n",
     "hair_data['Id'] = np.arange(len(hair_data))\n",
     "# converting to csv back\n",
-    "pd.DataFrame(hair_data).to_csv('Data/Predict Hair Fall Raw.csv', index=False)\n",
     "\n",
     "# Checking the structure of the dataset\n",
     "print(hair_data.info())"
@@ -89,7 +88,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 100,
+   "id": "b4802d78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Id                           0\n",
+      "Genetics                     0\n",
+      "Hormonal Changes             0\n",
+      "Medical Conditions           0\n",
+      "Medications & Treatments     0\n",
+      "Nutritional Deficiencies     0\n",
+      "Stress                       0\n",
+      "Age                          0\n",
+      "Poor Hair Care Habits        0\n",
+      "Environmental Factors        0\n",
+      "Smoking                      0\n",
+      "Weight Loss                  0\n",
+      "Hair Loss                    0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hair_data.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "4a7e2ba3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = ['Id', 'Genetics', 'Hormonal_Changes', 'Medical_Conditions',\n",
+    "       'Medications_and_Treatments', 'Nutritional_Deficiencies', 'Stress',\n",
+    "       'Age', 'Poor_Hair_Care_Habits', 'Environmental_Factors', 'Smoking',\n",
+    "       'Weight_Loss', 'Hair_Loss']\n",
+    "\n",
+    "hair_data.columns = columns\n",
+    "\n",
+    "hair_data.columns = [col.replace(' ', '_') for col in hair_data.columns]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "id": "2059b2c9",
    "metadata": {},
    "outputs": [
@@ -97,19 +144,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Id                             0\n",
-      "Genetics                       0\n",
-      "Hormonal Changes               0\n",
-      "Medical Conditions           110\n",
-      "Medications & Treatments       2\n",
-      "Nutritional Deficiencies      80\n",
-      "Stress                         0\n",
-      "Age                            0\n",
-      "Poor Hair Care Habits          0\n",
-      "Environmental Factors          0\n",
-      "Smoking                        0\n",
-      "Weight Loss                    0\n",
-      "Hair Loss                      0\n",
+      "Id                              0\n",
+      "Genetics                        0\n",
+      "Hormonal_Changes                0\n",
+      "Medical_Conditions            110\n",
+      "Medications_and_Treatments      2\n",
+      "Nutritional_Deficiencies       80\n",
+      "Stress                          0\n",
+      "Age                             0\n",
+      "Poor_Hair_Care_Habits           0\n",
+      "Environmental_Factors           0\n",
+      "Smoking                         0\n",
+      "Weight_Loss                     0\n",
+      "Hair_Loss                       0\n",
       "dtype: int64\n"
      ]
     }
@@ -118,6 +165,16 @@
     "# Although it looks like there are no missing values in this dataset, however, the missing data is represented as 'No Data' string\n",
     "hair_data.replace(['No Data', 'No data'], pd.NA , inplace=True)\n",
     "print(hair_data.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "bcf8b37b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(hair_data).to_csv('Data/Predict Hair Fall Raw.csv', index=False)"
    ]
   },
   {
@@ -134,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 104,
    "id": "446e561e",
    "metadata": {},
    "outputs": [
@@ -168,7 +225,7 @@
        "      <th></th>\n",
        "      <th>Id</th>\n",
        "      <th>Age</th>\n",
-       "      <th>Hair Loss</th>\n",
+       "      <th>Hair_Loss</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -225,7 +282,7 @@
        "</div>"
       ],
       "text/plain": [
-       "               Id         Age   Hair Loss\n",
+       "               Id         Age   Hair_Loss\n",
        "count  999.000000  999.000000  999.000000\n",
        "mean   499.000000   34.188188    0.497497\n",
        "std    288.530761    9.377980    0.500244\n",
@@ -236,7 +293,7 @@
        "max    998.000000   50.000000    1.000000"
       ]
      },
-     "execution_count": 435,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 105,
    "id": "d172e11c",
    "metadata": {},
    "outputs": [
@@ -311,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 106,
    "id": "0b411a67",
    "metadata": {},
    "outputs": [
@@ -341,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 107,
    "id": "efe33fa3",
    "metadata": {},
    "outputs": [
@@ -385,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 108,
    "id": "85b88499",
    "metadata": {},
    "outputs": [
@@ -420,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 109,
    "id": "77c90b1e",
    "metadata": {},
    "outputs": [],
@@ -434,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 110,
    "id": "77c4895c",
    "metadata": {},
    "outputs": [
@@ -482,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 111,
    "id": "821baa62",
    "metadata": {},
    "outputs": [
@@ -534,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 112,
    "id": "a8923076",
    "metadata": {},
    "outputs": [
@@ -604,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 113,
    "id": "826b7de3",
    "metadata": {},
    "outputs": [
@@ -693,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 114,
    "id": "3709c6ee",
    "metadata": {},
    "outputs": [
@@ -709,8 +766,8 @@
       "Dep. Variable:     Medical_Conditions_missing   No. Observations:                  999\n",
       "Model:                                  Logit   Df Residuals:                      995\n",
       "Method:                                   MLE   Df Model:                            3\n",
-      "Date:                        Thu, 16 Oct 2025   Pseudo R-squ.:                 0.01930\n",
-      "Time:                                00:37:21   Log-Likelihood:                -339.71\n",
+      "Date:                        Fri, 17 Oct 2025   Pseudo R-squ.:                 0.01930\n",
+      "Time:                                22:53:29   Log-Likelihood:                -339.71\n",
       "converged:                               True   LL-Null:                       -346.40\n",
       "Covariance Type:                    nonrobust   LLR p-value:                  0.003895\n",
       "========================================================================================\n",
@@ -753,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 115,
    "id": "46d4ec10",
    "metadata": {},
    "outputs": [],
@@ -767,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 116,
    "id": "85cc66a4",
    "metadata": {},
    "outputs": [
@@ -839,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 117,
    "id": "b15f4a09",
    "metadata": {},
    "outputs": [
@@ -897,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 118,
    "id": "2d615213",
    "metadata": {},
    "outputs": [
@@ -939,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 119,
    "id": "1534434c",
    "metadata": {},
    "outputs": [
@@ -1007,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 120,
    "id": "e26827f2",
    "metadata": {},
    "outputs": [
@@ -1071,13 +1128,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 121,
    "id": "90cb810b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Saving in a new csv file\n",
-    "hair_data.to_csv('Data/Predict_Hair_Fall_Cleaned.csv', index=False)"
+    "hair_data.to_csv('Data/Predict Hair Fall Cleaned.csv', index=False)"
    ]
   }
  ],
