--- a/Python Notebooks/data_cleaning_predit_hair_loss.ipynb
+++ b/Python Notebooks/data_cleaning_predit_hair_loss.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 206,
    "id": "e1897482",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 207,
    "id": "2f7d2054",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 208,
    "id": "b4802d78",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 209,
    "id": "4a7e2ba3",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 210,
    "id": "2059b2c9",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 211,
    "id": "bcf8b37b",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 212,
    "id": "446e561e",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
        "max    998.000000   50.000000    1.000000"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 213,
    "id": "d172e11c",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 214,
    "id": "0b411a67",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 215,
    "id": "efe33fa3",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 216,
    "id": "85b88499",
    "metadata": {},
    "outputs": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 217,
    "id": "77c90b1e",
    "metadata": {},
    "outputs": [],
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 218,
    "id": "77c4895c",
    "metadata": {},
    "outputs": [
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 219,
    "id": "821baa62",
    "metadata": {},
    "outputs": [
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 220,
    "id": "a8923076",
    "metadata": {},
    "outputs": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 221,
    "id": "826b7de3",
    "metadata": {},
    "outputs": [
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 222,
    "id": "3709c6ee",
    "metadata": {},
    "outputs": [
@@ -767,7 +767,7 @@
       "Model:                                  Logit   Df Residuals:                      995\n",
       "Method:                                   MLE   Df Model:                            3\n",
       "Date:                        Sun, 19 Oct 2025   Pseudo R-squ.:                 0.01930\n",
-      "Time:                                23:09:31   Log-Likelihood:                -339.71\n",
+      "Time:                                23:50:00   Log-Likelihood:                -339.71\n",
       "converged:                               True   LL-Null:                       -346.40\n",
       "Covariance Type:                    nonrobust   LLR p-value:                  0.003895\n",
       "========================================================================================\n",
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 223,
    "id": "46d4ec10",
    "metadata": {},
    "outputs": [],
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 224,
    "id": "85cc66a4",
    "metadata": {},
    "outputs": [
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 225,
    "id": "b15f4a09",
    "metadata": {},
    "outputs": [
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 226,
    "id": "2d615213",
    "metadata": {},
    "outputs": [
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 227,
    "id": "1534434c",
    "metadata": {},
    "outputs": [
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 228,
    "id": "6f6b9b79",
    "metadata": {},
    "outputs": [],
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 229,
    "id": "d79ae94f",
    "metadata": {},
    "outputs": [],
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 230,
    "id": "e26827f2",
    "metadata": {},
    "outputs": [
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 231,
    "id": "174bc283",
    "metadata": {},
    "outputs": [
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 232,
    "id": "0494bcc7",
    "metadata": {},
    "outputs": [
@@ -1278,7 +1278,7 @@
       "Model:                                        Logit   Df Residuals:                      995\n",
       "Method:                                         MLE   Df Model:                            3\n",
       "Date:                              Sun, 19 Oct 2025   Pseudo R-squ.:                  0.3353\n",
-      "Time:                                      23:09:32   Log-Likelihood:                -185.25\n",
+      "Time:                                      23:50:01   Log-Likelihood:                -185.25\n",
       "converged:                                     True   LL-Null:                       -278.69\n",
       "Covariance Type:                          nonrobust   LLR p-value:                 2.900e-40\n",
       "========================================================================================\n",
@@ -1321,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 233,
    "id": "f0c95b24",
    "metadata": {},
    "outputs": [],
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 234,
    "id": "9059abd9",
    "metadata": {},
    "outputs": [
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 235,
    "id": "1fbbf79a",
    "metadata": {},
    "outputs": [
@@ -1410,18 +1410,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 236,
    "id": "3073a54c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of missing values before imputation: 80\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"Number of missing values before imputation:\", hair_data['Nutritional_Deficiencies'].isna().sum())\n",
-    "print(hair_data['Nutritional_Deficiencies']['Age_Range'].value_counts())"
+    "print(\"Number of missing values before imputation:\", hair_data['Nutritional_Deficiencies'].isna().sum())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 237,
    "id": "2962c289",
    "metadata": {},
    "outputs": [
@@ -1450,27 +1457,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "118d268e",
+   "execution_count": 238,
+   "id": "50600d19",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of missing values after imputation: 0\n",
+      "Number of missing values before mode imputation: 80\n",
       "Nutritional_Deficiencies\n",
-      "Zinc Deficiency         122\n",
-      "Vitamin D Deficiency    114\n",
-      "Vitamin A Deficiency    109\n",
-      "Biotin Deficiency       105\n",
-      "Omega-3 fatty acids      98\n",
-      "Protein deficiency       96\n",
-      "Selenium deficiency      91\n",
-      "Vitamin E deficiency     91\n",
-      "Magnesium deficiency     87\n",
-      "Iron deficiency          86\n",
+      "Zinc Deficiency         108\n",
+      "Vitamin D Deficiency    104\n",
+      "Biotin Deficiency        99\n",
+      "Vitamin A Deficiency     99\n",
+      "Omega-3 fatty acids      92\n",
+      "Protein deficiency       90\n",
+      "Magnesium deficiency     84\n",
+      "Vitamin E deficiency     83\n",
+      "Selenium deficiency      82\n",
+      "Iron deficiency          78\n",
+      "Name: count, dtype: int64\n",
+      "Number of missing values after mode imputation: 0\n",
+      "Nutritional_Deficiencies\n",
+      "Vitamin A Deficiency    179\n",
+      "Zinc Deficiency         108\n",
+      "Vitamin D Deficiency    104\n",
+      "Biotin Deficiency        99\n",
+      "Omega-3 fatty acids      92\n",
+      "Protein deficiency       90\n",
+      "Magnesium deficiency     84\n",
+      "Vitamin E deficiency     83\n",
+      "Selenium deficiency      82\n",
+      "Iron deficiency          78\n",
       "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mode imputation for Nutritional_Deficiencies by Age_Range\n",
+    "print(\"Number of missing values before mode imputation:\", hair_data['Nutritional_Deficiencies'].isna().sum())\n",
+    "print(hair_data['Nutritional_Deficiencies'].value_counts())\n",
+    "def mode_impute_by_age_range(df):\n",
+    "    # Find mode for each Age_Range\n",
+    "    mode_map = df.groupby('Age_Range')['Nutritional_Deficiencies'].agg(lambda x: x.mode().iloc[0] if not x.mode().empty else np.nan)\n",
+    "    # Assign mode to missing values\n",
+    "    missing_mask = df['Nutritional_Deficiencies'].isna()\n",
+    "    df.loc[missing_mask, 'Nutritional_Deficiencies'] = df.loc[missing_mask, 'Age_Range'].map(mode_map)\n",
+    "    return df\n",
+    "\n",
+    "hair_data = mode_impute_by_age_range(hair_data)\n",
+    "\n",
+    "print(\"Number of missing values after mode imputation:\", hair_data['Nutritional_Deficiencies'].isna().sum())\n",
+    "print(hair_data['Nutritional_Deficiencies'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "618d5cc8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "id": "118d268e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Found array with 0 sample(s) (shape=(0, 7)) while a minimum of 1 is required by RandomForestClassifier.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[239], line 28\u001b[0m\n\u001b[1;32m     25\u001b[0m rf \u001b[38;5;241m=\u001b[39m RandomForestClassifier(n_estimators\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1000\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)\n\u001b[1;32m     26\u001b[0m rf\u001b[38;5;241m.\u001b[39mfit(X_train, y_train_encoded)\n\u001b[0;32m---> 28\u001b[0m preds_encoded \u001b[38;5;241m=\u001b[39m rf\u001b[38;5;241m.\u001b[39mpredict(X_missing)\n\u001b[1;32m     29\u001b[0m preds \u001b[38;5;241m=\u001b[39m target_le\u001b[38;5;241m.\u001b[39minverse_transform(preds_encoded)\n\u001b[1;32m     31\u001b[0m hair_data\u001b[38;5;241m.\u001b[39mloc[hair_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNutritional_Deficiencies\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39misna(), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNutritional_Deficiencies\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m preds\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/sklearn/ensemble/_forest.py:820\u001b[0m, in \u001b[0;36mForestClassifier.predict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    799\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpredict\u001b[39m(\u001b[38;5;28mself\u001b[39m, X):\n\u001b[1;32m    800\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    801\u001b[0m \u001b[38;5;124;03m    Predict class for X.\u001b[39;00m\n\u001b[1;32m    802\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    818\u001b[0m \u001b[38;5;124;03m        The predicted classes.\u001b[39;00m\n\u001b[1;32m    819\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 820\u001b[0m     proba \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpredict_proba(X)\n\u001b[1;32m    822\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_outputs_ \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m    823\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclasses_\u001b[38;5;241m.\u001b[39mtake(np\u001b[38;5;241m.\u001b[39margmax(proba, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m), axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/sklearn/ensemble/_forest.py:862\u001b[0m, in \u001b[0;36mForestClassifier.predict_proba\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    860\u001b[0m check_is_fitted(\u001b[38;5;28mself\u001b[39m)\n\u001b[1;32m    861\u001b[0m \u001b[38;5;66;03m# Check data\u001b[39;00m\n\u001b[0;32m--> 862\u001b[0m X \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_X_predict(X)\n\u001b[1;32m    864\u001b[0m \u001b[38;5;66;03m# Assign chunk of trees to jobs\u001b[39;00m\n\u001b[1;32m    865\u001b[0m n_jobs, _, _ \u001b[38;5;241m=\u001b[39m _partition_estimators(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_estimators, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_jobs)\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/sklearn/ensemble/_forest.py:602\u001b[0m, in \u001b[0;36mBaseForest._validate_X_predict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    599\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    600\u001b[0m \u001b[38;5;124;03mValidate X whenever one tries to predict, apply, predict_proba.\"\"\"\u001b[39;00m\n\u001b[1;32m    601\u001b[0m check_is_fitted(\u001b[38;5;28mself\u001b[39m)\n\u001b[0;32m--> 602\u001b[0m X \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_data(X, dtype\u001b[38;5;241m=\u001b[39mDTYPE, accept_sparse\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcsr\u001b[39m\u001b[38;5;124m\"\u001b[39m, reset\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m    603\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m issparse(X) \u001b[38;5;129;01mand\u001b[39;00m (X\u001b[38;5;241m.\u001b[39mindices\u001b[38;5;241m.\u001b[39mdtype \u001b[38;5;241m!=\u001b[39m np\u001b[38;5;241m.\u001b[39mintc \u001b[38;5;129;01mor\u001b[39;00m X\u001b[38;5;241m.\u001b[39mindptr\u001b[38;5;241m.\u001b[39mdtype \u001b[38;5;241m!=\u001b[39m np\u001b[38;5;241m.\u001b[39mintc):\n\u001b[1;32m    604\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo support for np.int64 index based sparse matrices\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/sklearn/base.py:565\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[0;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[1;32m    563\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mValidation should be done on X, y or both.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    564\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m no_val_X \u001b[38;5;129;01mand\u001b[39;00m no_val_y:\n\u001b[0;32m--> 565\u001b[0m     X \u001b[38;5;241m=\u001b[39m check_array(X, input_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mX\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mcheck_params)\n\u001b[1;32m    566\u001b[0m     out \u001b[38;5;241m=\u001b[39m X\n\u001b[1;32m    567\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m no_val_X \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m no_val_y:\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/sklearn/utils/validation.py:931\u001b[0m, in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator, input_name)\u001b[0m\n\u001b[1;32m    929\u001b[0m     n_samples \u001b[38;5;241m=\u001b[39m _num_samples(array)\n\u001b[1;32m    930\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m n_samples \u001b[38;5;241m<\u001b[39m ensure_min_samples:\n\u001b[0;32m--> 931\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    932\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFound array with \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m sample(s) (shape=\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m) while a\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    933\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m minimum of \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m is required\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    934\u001b[0m             \u001b[38;5;241m%\u001b[39m (n_samples, array\u001b[38;5;241m.\u001b[39mshape, ensure_min_samples, context)\n\u001b[1;32m    935\u001b[0m         )\n\u001b[1;32m    937\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m ensure_min_features \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m array\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m2\u001b[39m:\n\u001b[1;32m    938\u001b[0m     n_features \u001b[38;5;241m=\u001b[39m array\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m]\n",
+      "\u001b[0;31mValueError\u001b[0m: Found array with 0 sample(s) (shape=(0, 7)) while a minimum of 1 is required by RandomForestClassifier."
      ]
     }
    ],
@@ -1514,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "id": "90cb810b",
    "metadata": {},
    "outputs": [],
@@ -1526,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": null,
    "id": "608c07b9",
    "metadata": {},
    "outputs": [
@@ -1570,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": null,
    "id": "db335d21",
    "metadata": {},
    "outputs": [
