--- a/Python Notebooks/data_cleaning_nutrition_dataset.ipynb
+++ b/Python Notebooks/data_cleaning_nutrition_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "88388f31",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6cb09011",
    "metadata": {},
    "outputs": [
@@ -219,20 +219,20 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data = pd.read_csv('../Data/Nutrition_Dataset.csv')\n",
-    "data = data.drop(columns=['Unnamed: 0.1', 'Unnamed: 0'])\n",
+    "data = data.drop(columns=['Unnamed: 0'])\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "e72295ac",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "1e5e13a9",
    "metadata": {},
    "outputs": [],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "2ce29932",
    "metadata": {},
    "outputs": [],
