--- a/Python Notebooks/data_cleaning_predit_hair_loss.ipynb
+++ b/Python Notebooks/data_cleaning_predit_hair_loss.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 1,
    "id": "e1897482",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 2,
    "id": "2f7d2054",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 3,
    "id": "b4802d78",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 4,
    "id": "4a7e2ba3",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 5,
    "id": "2059b2c9",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 6,
    "id": "bcf8b37b",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 7,
    "id": "446e561e",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
        "max    998.000000   50.000000    1.000000"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 8,
    "id": "d172e11c",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 9,
    "id": "0b411a67",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 10,
    "id": "efe33fa3",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 11,
    "id": "85b88499",
    "metadata": {},
    "outputs": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 12,
    "id": "77c90b1e",
    "metadata": {},
    "outputs": [],
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 13,
    "id": "77c4895c",
    "metadata": {},
    "outputs": [
@@ -530,6 +530,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "8b642ace",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 999 entries, 0 to 998\n",
+      "Data columns (total 23 columns):\n",
+      " #   Column                            Non-Null Count  Dtype \n",
+      "---  ------                            --------------  ----- \n",
+      " 0   Id                                999 non-null    int64 \n",
+      " 1   Genetics                          999 non-null    object\n",
+      " 2   Hormonal_Changes                  999 non-null    int64 \n",
+      " 3   Medical_Conditions                999 non-null    object\n",
+      " 4   Medications_and_Treatments        997 non-null    object\n",
+      " 5   Nutritional_Deficiencies          999 non-null    object\n",
+      " 6   Stress                            999 non-null    object\n",
+      " 7   Age                               999 non-null    int64 \n",
+      " 8   Poor_Hair_Care_Habits             999 non-null    object\n",
+      " 9   Environmental_Factors             999 non-null    int64 \n",
+      " 10  Smoking                           999 non-null    int64 \n",
+      " 11  Weight_Loss                       999 non-null    int64 \n",
+      " 12  Hair_Loss                         999 non-null    int64 \n",
+      " 13  Genetic_Encoding                  999 non-null    int64 \n",
+      " 14  Hormonal_Encoding                 999 non-null    int64 \n",
+      " 15  Poor_Hair_Care_Encoding           999 non-null    int64 \n",
+      " 16  Environmental_Encoding            999 non-null    int64 \n",
+      " 17  Smoking_Encoding                  999 non-null    int64 \n",
+      " 18  Weight_Loss_Encoding              999 non-null    int64 \n",
+      " 19  Stress_Level                      999 non-null    int64 \n",
+      " 20  Age_Range                         999 non-null    int64 \n",
+      " 21  Medical_Conditions_missing        999 non-null    int64 \n",
+      " 22  Nutritional_Deficiencies_missing  999 non-null    int64 \n",
+      "dtypes: int64(17), object(6)\n",
+      "memory usage: 179.6+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hair_data.info())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ae1782b4",
    "metadata": {},
@@ -539,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 14,
    "id": "821baa62",
    "metadata": {},
    "outputs": [
@@ -591,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 15,
    "id": "a8923076",
    "metadata": {},
    "outputs": [
@@ -661,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 16,
    "id": "826b7de3",
    "metadata": {},
    "outputs": [
@@ -750,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 17,
    "id": "3709c6ee",
    "metadata": {},
    "outputs": [
@@ -766,8 +814,8 @@
       "Dep. Variable:     Medical_Conditions_missing   No. Observations:                  999\n",
       "Model:                                  Logit   Df Residuals:                      995\n",
       "Method:                                   MLE   Df Model:                            3\n",
-      "Date:                        Sun, 19 Oct 2025   Pseudo R-squ.:                 0.01930\n",
-      "Time:                                23:50:00   Log-Likelihood:                -339.71\n",
+      "Date:                        Sun, 30 Nov 2025   Pseudo R-squ.:                 0.01930\n",
+      "Time:                                12:34:54   Log-Likelihood:                -339.71\n",
       "converged:                               True   LL-Null:                       -346.40\n",
       "Covariance Type:                    nonrobust   LLR p-value:                  0.003895\n",
       "========================================================================================\n",
@@ -810,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 18,
    "id": "46d4ec10",
    "metadata": {},
    "outputs": [],
@@ -824,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 19,
    "id": "85cc66a4",
    "metadata": {},
    "outputs": [
@@ -896,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 20,
    "id": "b15f4a09",
    "metadata": {},
    "outputs": [
@@ -954,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 21,
    "id": "2d615213",
    "metadata": {},
    "outputs": [
@@ -996,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 22,
    "id": "1534434c",
    "metadata": {},
    "outputs": [
@@ -1064,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 23,
    "id": "6f6b9b79",
    "metadata": {},
    "outputs": [],
@@ -1076,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 24,
    "id": "d79ae94f",
    "metadata": {},
    "outputs": [],
@@ -1107,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 25,
    "id": "e26827f2",
    "metadata": {},
    "outputs": [
@@ -1179,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 26,
    "id": "174bc283",
    "metadata": {},
    "outputs": [
@@ -1261,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 27,
    "id": "0494bcc7",
    "metadata": {},
    "outputs": [
@@ -1277,8 +1325,8 @@
       "Dep. Variable:     Nutritional_Deficiencies_missing   No. Observations:                  999\n",
       "Model:                                        Logit   Df Residuals:                      995\n",
       "Method:                                         MLE   Df Model:                            3\n",
-      "Date:                              Sun, 19 Oct 2025   Pseudo R-squ.:                  0.3353\n",
-      "Time:                                      23:50:01   Log-Likelihood:                -185.25\n",
+      "Date:                              Sun, 30 Nov 2025   Pseudo R-squ.:                  0.3353\n",
+      "Time:                                      12:34:56   Log-Likelihood:                -185.25\n",
       "converged:                                     True   LL-Null:                       -278.69\n",
       "Covariance Type:                          nonrobust   LLR p-value:                 2.900e-40\n",
       "========================================================================================\n",
@@ -1321,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 28,
    "id": "f0c95b24",
    "metadata": {},
    "outputs": [],
@@ -1332,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 29,
    "id": "9059abd9",
    "metadata": {},
    "outputs": [
@@ -1376,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 30,
    "id": "1fbbf79a",
    "metadata": {},
    "outputs": [
@@ -1410,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 31,
    "id": "3073a54c",
    "metadata": {},
    "outputs": [
@@ -1428,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 32,
    "id": "2962c289",
    "metadata": {},
    "outputs": [
@@ -1457,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 33,
    "id": "50600d19",
    "metadata": {},
    "outputs": [
@@ -1522,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 34,
    "id": "118d268e",
    "metadata": {},
    "outputs": [
@@ -1533,7 +1581,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[239], line 28\u001b[0m\n\u001b[1;32m     25\u001b[0m rf \u001b[38;5;241m=\u001b[39m RandomForestClassifier(n_estimators\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1000\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)\n\u001b[1;32m     26\u001b[0m rf\u001b[38;5;241m.\u001b[39mfit(X_train, y_train_encoded)\n\u001b[0;32m---> 28\u001b[0m preds_encoded \u001b[38;5;241m=\u001b[39m rf\u001b[38;5;241m.\u001b[39mpredict(X_missing)\n\u001b[1;32m     29\u001b[0m preds \u001b[38;5;241m=\u001b[39m target_le\u001b[38;5;241m.\u001b[39minverse_transform(preds_encoded)\n\u001b[1;32m     31\u001b[0m hair_data\u001b[38;5;241m.\u001b[39mloc[hair_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNutritional_Deficiencies\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39misna(), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNutritional_Deficiencies\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m preds\n",
+      "Cell \u001b[0;32mIn[34], line 28\u001b[0m\n\u001b[1;32m     25\u001b[0m rf \u001b[38;5;241m=\u001b[39m RandomForestClassifier(n_estimators\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1000\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)\n\u001b[1;32m     26\u001b[0m rf\u001b[38;5;241m.\u001b[39mfit(X_train, y_train_encoded)\n\u001b[0;32m---> 28\u001b[0m preds_encoded \u001b[38;5;241m=\u001b[39m rf\u001b[38;5;241m.\u001b[39mpredict(X_missing)\n\u001b[1;32m     29\u001b[0m preds \u001b[38;5;241m=\u001b[39m target_le\u001b[38;5;241m.\u001b[39minverse_transform(preds_encoded)\n\u001b[1;32m     31\u001b[0m hair_data\u001b[38;5;241m.\u001b[39mloc[hair_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNutritional_Deficiencies\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39misna(), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNutritional_Deficiencies\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m preds\n",
       "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/sklearn/ensemble/_forest.py:820\u001b[0m, in \u001b[0;36mForestClassifier.predict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    799\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpredict\u001b[39m(\u001b[38;5;28mself\u001b[39m, X):\n\u001b[1;32m    800\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    801\u001b[0m \u001b[38;5;124;03m    Predict class for X.\u001b[39;00m\n\u001b[1;32m    802\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    818\u001b[0m \u001b[38;5;124;03m        The predicted classes.\u001b[39;00m\n\u001b[1;32m    819\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 820\u001b[0m     proba \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpredict_proba(X)\n\u001b[1;32m    822\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_outputs_ \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m    823\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclasses_\u001b[38;5;241m.\u001b[39mtake(np\u001b[38;5;241m.\u001b[39margmax(proba, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m), axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n",
       "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/sklearn/ensemble/_forest.py:862\u001b[0m, in \u001b[0;36mForestClassifier.predict_proba\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    860\u001b[0m check_is_fitted(\u001b[38;5;28mself\u001b[39m)\n\u001b[1;32m    861\u001b[0m \u001b[38;5;66;03m# Check data\u001b[39;00m\n\u001b[0;32m--> 862\u001b[0m X \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_X_predict(X)\n\u001b[1;32m    864\u001b[0m \u001b[38;5;66;03m# Assign chunk of trees to jobs\u001b[39;00m\n\u001b[1;32m    865\u001b[0m n_jobs, _, _ \u001b[38;5;241m=\u001b[39m _partition_estimators(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_estimators, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_jobs)\n",
       "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/sklearn/ensemble/_forest.py:602\u001b[0m, in \u001b[0;36mBaseForest._validate_X_predict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    599\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    600\u001b[0m \u001b[38;5;124;03mValidate X whenever one tries to predict, apply, predict_proba.\"\"\"\u001b[39;00m\n\u001b[1;32m    601\u001b[0m check_is_fitted(\u001b[38;5;28mself\u001b[39m)\n\u001b[0;32m--> 602\u001b[0m X \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_data(X, dtype\u001b[38;5;241m=\u001b[39mDTYPE, accept_sparse\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcsr\u001b[39m\u001b[38;5;124m\"\u001b[39m, reset\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m    603\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m issparse(X) \u001b[38;5;129;01mand\u001b[39;00m (X\u001b[38;5;241m.\u001b[39mindices\u001b[38;5;241m.\u001b[39mdtype \u001b[38;5;241m!=\u001b[39m np\u001b[38;5;241m.\u001b[39mintc \u001b[38;5;129;01mor\u001b[39;00m X\u001b[38;5;241m.\u001b[39mindptr\u001b[38;5;241m.\u001b[39mdtype \u001b[38;5;241m!=\u001b[39m np\u001b[38;5;241m.\u001b[39mintc):\n\u001b[1;32m    604\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo support for np.int64 index based sparse matrices\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
